Update: Leigod Acc

--- a/package/lean/luci-app-leigod-acc/po/zh-cn/leigo-acc.po
+++ b/package/lean/luci-app-leigod-acc/po/zh-cn/leigo-acc.po
@@ -80,14 +80,17 @@ msgstr "手机设备"
 msgid "None_Catalog"
 msgstr "未分类设备"
 
+msgid "None"
+msgstr "无数据"
+
 msgid "PC_Catalog"
-msgstr "PC设备"
+msgstr "PC 设备"
 
 msgid "Game_Catalog"
 msgstr "游戏机"
 
 msgid "VR_Catalog"
-msgstr "VR设备"
+msgstr "VR 设备"
 
 msgid "Unknown_Catalog"
 msgstr "未识别设备"
