--- a/package/lean/luci-app-leigod-acc/po/zh-cn/leigo-acc.po
+++ b/package/lean/luci-app-leigod-acc/po/zh-cn/leigo-acc.po
@@ -114,7 +114,7 @@ msgid "Acc Service Enabled"
 msgstr "已启动"
 
 msgid "Acc Catalog Started"
-msgstr "已禁用"
+msgstr "已启用"
 
 msgid "Acc Catalog Stopped"
 msgstr "该设备类别加速已停止"
